# ohmyboring

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .trivyignore.yaml  CHANGELOG.md  CONTRIBUTING.md  GOALS.md  Makefile  README.en.md  README.ja.md  README.ko.md  README.md  SECURITY.md  boring.example.json  boring.schema.json  docker-compose.yml  install.sh  start.sh
.github/: PULL_REQUEST_TEMPLATE.md
drudge/: CLAUDE.md  Cargo.toml  Dockerfile  ENFORCEMENT.md  PHILOSOPHY.md  PRINCIPLES.md  RUST-STYLE.md  WORKFLOW.md  deny.toml
drudge/src/: ask.rs  audit.rs  config.rs  distill.rs  extract.rs  frontmatter.rs  graph.rs  ingest.rs  lib.rs  llm.rs  main.rs  ollama.rs  pii.rs  redact.rs  renumber.rs  retrieve.rs  serve.rs  store.rs  vault.rs  wiki_recall.rs  workflow.rs
drudge/src/serve/: http.rs  mcp.rs  scheduler.rs
drudge/src/vault/: audit.rs  projection.rs  remember.rs
drudge/tests/: context_integration.rs  data_integrity.rs  origin_boundary.rs  redact_fuzz.rs  store_integration.rs
hermes-rs/: CLAUDE.md  Cargo.toml  Dockerfile  ENFORCEMENT.md
hooks/: boring_config.py  collect-kimi-sessions.py  collect-sessions.py  distill-session.py  ingest-worker.py  kimi-distill-session.py  kimi-recall.py  recall.py
scripts/: backup-db.sh  bench-embed.py  bench-llm.py  calendar-prep.py  confluence-sync.py  data-steward.py  dedup-wiki.py  doctor.sh  e2e.sh  ensure-ollama.sh  eval-gate.sh  github-ingest.py  guard.sh  jira-ingest.py  migrate-config.sh  preflight-deps.sh  ralph-adversarial-hunt.py  restore-db.sh  retention.py  smoke.sh  (+11 more)
(+100 files in other folders)
